# algo-trader

./: .gitignore  ANGEL_ONE_COMPLETE.md  ANGEL_ONE_SETUP.md  ARCHITECTURE.md  HOW_TRADERS_SCOUT_STOCKS.md  LIVE_DATA_GUIDE.md  NETWORK_WORKAROUND.md  QUICKSTART_RELIANCE.md  README.md  TELEGRAM_BOT_GUIDE.md  positions.json  pyproject.toml
.github/: copilot-instructions.md
examples/: HOW_TO_GET_STOCK_DATA.md  backtest_reliance.py  backtest_reliance_csv.py  debug_ma_strategy.py  download_angel_data.py  download_real_data.py  download_yahoo_data.py  generate_realistic_data.py  live_monitor_angel.py  live_monitor_csv.py  live_monitor_realtime.py  live_signal_monitor.py  scan_and_notify.py  scan_stocks.py  scan_stocks_csv.py  screen_portfolio.py  setup_angel_one.py  setup_telegram.py  test_angel_curl.py  test_notifications.py  test_real_data.py  test_telegram.py  test_telegram_curl.py  test_telegram_direct.py
examples/data/: hdfcbank_ns.csv  icicibank_ns.csv  infy_ns.csv  reliance_ns.csv  sbin_ns.csv  tcs_ns.csv
src/algotrader/: __init__.py  runner.py  scanner.py  screener.py
src/algotrader/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/algotrader/data/: __init__.py  angel_curl.py  angel_one.py  source.py  yahoo_finance.py
src/algotrader/engine/: __init__.py  backtester.py
src/algotrader/execution/: __init__.py  broker.py  positions.py
src/algotrader/metrics/: __init__.py  report.py
src/algotrader/risk/: __init__.py  manager.py
src/algotrader/signals/: __init__.py  (+2 more)
tests/: test_backtester.py  test_moving_average_strategy.py
(+4 files in other folders)
